--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -45,7 +45,8 @@
             android:hint="@string/name"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/signUpImage">
+            app:layout_constraintTop_toBottomOf="@+id/signUpImage"
+            app:startIconDrawable="@drawable/baseline_account_box_24">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/sign_up_name_edit_text"
@@ -65,7 +66,8 @@
             android:hint="@string/enter_your_email_id"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/sign_up_name_instructions">
+            app:layout_constraintTop_toBottomOf="@+id/sign_up_name_instructions"
+            app:startIconDrawable="@drawable/baseline_email_24">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/sign_up_email_edit_text"
@@ -86,7 +88,8 @@
             app:passwordToggleEnabled="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/sign_up_email_instructions">
+            app:layout_constraintTop_toBottomOf="@+id/sign_up_email_instructions"
+            app:startIconDrawable="@drawable/baseline_lock_24">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/sign_up_password_edit_text"
@@ -107,7 +110,8 @@
             app:passwordToggleEnabled="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/sign_up_password_instructions">
+            app:layout_constraintTop_toBottomOf="@+id/sign_up_password_instructions"
+            app:startIconDrawable="@drawable/baseline_lock_24">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/sign_up_confirm_password_edit_text"
