--- a/app/src/main/res/layout/activity_doctor_list.xml
+++ b/app/src/main/res/layout/activity_doctor_list.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.DoctorListActivity">
+    tools:context=".activities.DoctorListActivity"
+    android:background="@color/app_background">
 
     <FrameLayout
         android:layout_width="match_parent"
