--- a/app/src/main/res/layout/activity_make_appointment.xml
+++ b/app/src/main/res/layout/activity_make_appointment.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.MakeAppointmentActivity">
+    tools:context=".activities.MakeAppointmentActivity"
+    android:background="@color/app_background">
 
     <ImageView
         android:id="@+id/iv_calendar_previous"
