--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="red_700">#FFD32F2F</color>
     <color name="red_400">#FFEF5350</color>
     <color name="red">#bb273b</color>
+    <color name="app_background">#FEEAB2</color>
 </resources>
