--- a/app/src/main/res/layout/item_time_list.xml
+++ b/app/src/main/res/layout/item_time_list.xml
@@ -11,7 +11,8 @@
             android:layout_width="75dp"
             android:layout_height="42dp"
             android:gravity="center"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_gravity="center">
 
             <TextView
                 android:id="@+id/tv_time"
