--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -18,6 +18,7 @@
             android:layout_marginEnd="15dp"
             android:layout_marginTop="30dp"
             android:fontFamily="sans-serif-smallcaps"
+            style="@style/AuthenticateHeading"
             android:text="@string/welcome_sign_in_to_meet_your_super_heroes"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -97,7 +98,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="40dp"
             android:text="@string/don_t_have_an_account"
-            android:textColor="@color/indigo_800"
+            style="@style/IndigoText"
             android:layout_marginTop="30dp"
             app:layout_constraintTop_toBottomOf="@id/log_in_button"
             app:layout_constraintBottom_toBottomOf="parent"
