--- a/app/src/main/res/layout/item_appointment_list.xml
+++ b/app/src/main/res/layout/item_appointment_list.xml
@@ -19,7 +19,8 @@
             tools:src="@tools:sample/avatars"
             android:scaleType="fitCenter"
             android:padding="5dp"
-            android:contentDescription="@string/doctorimage" />
+            android:contentDescription="@string/doctorimage"
+            android:background="@color/white"/>
         <LinearLayout
             android:layout_marginStart="135dp"
             android:layout_marginEnd="10dp"
@@ -34,33 +35,33 @@
                 android:layout_height="wrap_content"
                 tools:text="Dr. Neil Huston"
                 android:textStyle="bold"
-                android:textColor="@color/black"
+                android:textColor="?android:colorPrimary"
                 android:textSize="19sp"/>
             <TextView
                 android:id="@+id/appointment_doctor_category"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 tools:text="Eyes Specialist"
-                android:textColor="@color/indigo_800"/>
+                style="@style/IndigoText"/>
             <TextView
                 android:id="@+id/appointment_no"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/appointment_no_s"
                 android:layout_marginTop="20dp"
-                android:textColor="@color/black"/>
+                android:textColor="?android:colorPrimary"/>
             <TextView
                 android:id="@+id/appointment_pay"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/payment_s"
-                android:textColor="@color/black"/>
+                android:textColor="?android:colorPrimary"/>
             <TextView
                 android:id="@+id/appointment_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/date_s"
-                android:textColor="@color/black"/>
+                android:textColor="?android:colorPrimary"/>
         </LinearLayout>
     </com.google.android.material.card.MaterialCardView>
 
