--- a/app/src/main/res/layout/item_doctor_list.xml
+++ b/app/src/main/res/layout/item_doctor_list.xml
@@ -20,7 +20,8 @@
             tools:src="@tools:sample/avatars"
             android:scaleType="fitCenter"
             android:padding="5dp"
-            android:contentDescription="@string/doctorimage" />
+            android:contentDescription="@string/doctorimage"
+            android:background="@color/white"/>
         <LinearLayout
             android:layout_marginStart="135dp"
             android:layout_marginEnd="10dp"
@@ -33,33 +34,35 @@
                 android:id="@+id/doctor_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Dr. Neil Huston"
+                tools:text="Dr. Neil Huston"
                 android:textStyle="bold"
-                android:textColor="@color/black"
+                android:textColor="?android:colorPrimary"
                 android:textSize="19sp"/>
             <TextView
                 android:id="@+id/doctor_category"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Eyes Specialist"
-                android:textColor="#BBBABF"/>
+                tools:text="Eyes Specialist"
+                style="@style/DoctorCategoryText"/>
             <TextView
                 android:layout_marginTop="3dp"
                 android:id="@+id/doctor_experience"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="?android:colorPrimary"
                 android:text="@string/years_of_experience_s"/>
             <TextView
                 android:layout_marginTop="3dp"
                 android:id="@+id/doctor_fees"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="?android:colorPrimary"
                 android:text="@string/fees_s_per_hour"/>
             <TextView
                 android:id="@+id/doctor_rating"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:textColor="@color/black"
+                android:textColor="?android:colorPrimary"
                 android:gravity="bottom|end"
                 android:text="@string/rating_s_5"/>
         </LinearLayout>
