--- a/app/src/main/res/layout/item_home_doctor_list.xml
+++ b/app/src/main/res/layout/item_home_doctor_list.xml
@@ -18,7 +18,8 @@
             tools:src="@tools:sample/avatars"
             android:scaleType="center"
             android:padding="5dp"
-            />
+            android:contentDescription="@string/home_doctor_list_image"
+            android:background="@color/white"/>
         <LinearLayout
             android:layout_marginStart="115dp"
             android:layout_marginEnd="10dp"
@@ -33,19 +34,19 @@
                 android:layout_height="wrap_content"
                 tools:text="Dr. Neil Huston"
                 android:textStyle="bold"
-                android:textColor="@color/black"
+                android:textColor="?android:colorPrimary"
                 android:textSize="19sp"/>
             <TextView
                 android:id="@+id/doctor_category"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 tools:text="Eyes Specialist"
-                android:textColor="#BBBABF"/>
+                style="@style/DoctorCategoryText"/>
             <TextView
                 android:id="@+id/doctor_rating"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:textColor="@color/black"
+                android:textColor="?android:colorPrimary"
                 android:gravity="bottom|end"
                 tools:text="@string/rating_s_5"/>
         </LinearLayout>
