--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,9 +2,20 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.MedDirect" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="android:textColor">@color/black</item>
+        <item name="colorPrimary">@color/black</item>
+    </style>
+    <style name="AuthenticateHeading" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">@color/black</item>
     </style>
 
+    <style name="DoctorCategoryText" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">#98979A</item>
+    </style>
+
+    <style name="IndigoText" parent= "TextAppearance.Material3.TitleSmall">
+        <item name="android:textColor">@color/indigo_800</item>
+    </style>
     <style name="Theme.MedDirect" parent="Base.Theme.MedDirect" />
     <style name="Widget.mediDirect.TextInputLayout.OutlinedBox" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
         <item name="boxStrokeErrorColor">@color/red_700</item>
