--- a/app/src/main/res/layout/activity_appointment_list.xml
+++ b/app/src/main/res/layout/activity_appointment_list.xml
@@ -56,7 +56,7 @@
             android:layout_marginEnd="20dp"
             android:layout_marginTop="10dp"
             tools:listitem="@layout/item_appointment_list"
-            android:clipToPadding="false"/>
+            android:clipToPadding="true"/>
 
     </LinearLayout>
 </ScrollView>
