--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,7 +12,9 @@
     <style name="DoctorCategoryText" parent="TextAppearance.AppCompat">
         <item name="android:textColor">#98979A</item>
     </style>
-
+    <style name="LightBlueText" parent="TextAppearance.AppCompat">
+        <item name="android:textColor">@color/light_blue_700</item>
+    </style>
     <style name="IndigoText" parent= "TextAppearance.Material3.TitleSmall">
         <item name="android:textColor">@color/indigo_800</item>
     </style>
